--- a/Astrostatistics_Lecture09_20210512.ipynb
+++ b/Astrostatistics_Lecture09_20210512.ipynb
@@ -6,7 +6,7 @@
       "name": "Astrostatistics_Lecture09_20210512.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNhKBPyJKAQibDQOenhHnMF",
+      "authorship_tag": "ABX9TyPJbzMZxqwmz5IOJHEXiLyF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "import numpy as np\n",
         "from scipy.stats import norm, t"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -232,13 +232,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R0YdWhG5OSeL"
+        "id": "R0YdWhG5OSeL",
+        "outputId": "3a5a633a-591d-45ed-e225-be799156212a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "from astropy import units as u\n",
+        "m = 0.2 * u.kg\n",
+        "sig_m = 0.05 * u.kg\n",
+        "#P(|Z| < a) = 0.82 ==> P(Z < -a) = (1 - 0.82) / 2\n",
+        "nsig = -norm.ppf((1 - 0.82) / 2) #This is the distance from the mean value in number of standard deviations\n",
+        "dm = sig_m * nsig #This is the distance from the mean value in physical units (mass)\n",
+        "CI = np.array([np.round((m - dm).value, decimals = 3), np.round((m + dm).value, decimals = 3)]) * u.kg\n",
+        "print(\"The 82% confidence interval is {}\".format(CI))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The 82% confidence interval is [0.133 0.267] kg\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,13 +271,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "97MECKagP85E"
+        "id": "97MECKagP85E",
+        "outputId": "366f45e4-ec32-49e6-a6db-f09cdfd5a84d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "CI = np.array([0.00545, 0.3946])\n",
+        "#standardise this interval -- subtract the mean, divide by the standard deviation\n",
+        "#CI_standard = (CI - np.array([m, m])) / np.array([sig_m, sig_m])\n",
+        "Z_CI = (CI - m.value) / sig_m.value\n",
+        "print(\"Standardised CI: {}\".format(Z_CI))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Standardised CI: [-3.891  3.892]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PqTPk5VGJua3",
+        "outputId": "c0a485fe-a43b-450b-817d-76369c8315e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#The above is a symmetric 3.89-sigma CI!\n",
+        "#The associated confidence is the total probability enclosed by this interval\n",
+        "confidence = norm.cdf(Z_CI[1]) - norm.cdf(Z_CI[0])\n",
+        "print(\"The confidence associated with the given CI is {} (significance: {})\".\\\n",
+        "      format(np.round(confidence, decimals = 6), np.format_float_scientific(1 - confidence, precision = 2)))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The confidence associated with the given CI is 0.9999 (significance: 9.96e-05)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -277,9 +339,9 @@
         "id": "E4M4NdHKT4kK"
       },
       "source": [
-        "m = np.array([0.2, 0.35, 0.25])"
+        "m = np.array([0.2, 0.35, 0.25]) * u.kg"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -295,13 +357,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nvUI8H7ZO4Fc"
+        "id": "nvUI8H7ZO4Fc",
+        "outputId": "d44683b3-bdba-4854-f05d-af82fd52ea36",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "mu_hat = m.mean()\n",
+        "sig_hat = m.std(ddof = 1)\n",
+        "print(\"Estimates for the mean and standard deviation are {} and {} respectively.\".format(np.round(mu_hat, decimals = 4), np.round(sig_hat, decimals = 4)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Estimates for the mean and standard deviation are 0.2667 kg and 0.0764 kg respectively.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -315,13 +391,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qHPFuAUETKju"
+        "id": "qHPFuAUETKju",
+        "outputId": "16f3d364-30f6-404b-83f2-9408c9c49b9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "#Since the sample mean was calculated in order to compute the sample standard deviation, #dof = N - 1\n",
+        "dof = len(m) - 1\n",
+        "#P(|T| < a) = 0.95 ==> P(T < -a) = (1 - 0.95) / 2\n",
+        "nsig = -t.ppf((1 - 0.995) / 2, df = dof) #This is the distance from the mean value in number of standard deviations\n",
+        "dm = sig_hat * nsig #This is the distance from the mean value in physical units (mass)\n",
+        "CI = np.array([np.round((mu_hat - dm).value, decimals = 4), np.round((mu_hat + dm).value, decimals = 4)]) * u.kg\n",
+        "print(\"The 95% confidence interval is {}\".format(CI))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The 95% confidence interval is [-0.8094  1.3427] kg\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -335,7 +429,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0GPaYNMkP2-b"
+        "id": "0GPaYNMkP2-b",
+        "outputId": "cd87dfe4-2243-42a7-f139-f04753209f5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "CI = np.array([-0.0484, 0.5824])\n",
+        "#studentise this interval -- subtract the sample mean, divide by the sample standard deviation\n",
+        "#CI_standard = (CI - np.array([m, m])) / np.array([sig_m, sig_m])\n",
+        "T_CI = (CI - mu_hat.value) / sig_hat.value\n",
+        "print(\"Studentised CI: {}\".format(T_CI))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Studentised CI: [-4.125191    4.13391971]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n_By_Za-M2i1",
+        "outputId": "2d82d28f-18ca-4248-eea2-b15d2b4d5b3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#The above is a symmetric 4.13-sigma CI!\n",
+        "#The associated confidence is the total probability enclosed by this interval\n",
+        "confidence = t.cdf(T_CI[1], df = dof) - t.cdf(T_CI[0], df = dof)\n",
+        "print(\"The confidence associated with the given CI is {} (significance: {})\".\\\n",
+        "      format(np.round(confidence, decimals = 6), np.format_float_scientific(1 - confidence, precision = 2)))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The confidence associated with the given CI is 0.946061 (significance: 5.39e-02)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G_C7DB3kk2yG"
       },
       "source": [
         ""
