--- a/Astrostatistics_Lecture14_20210601.ipynb
+++ b/Astrostatistics_Lecture14_20210601.ipynb
@@ -157,6 +157,149 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "L-zkA-YXTI3D"
+      },
+      "source": [
+        "#**Two-sample Z-test on independent samples.**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KQqjZWqQTpa7"
+      },
+      "source": [
+        "#Case 1. Two individual measurements.\n",
+        "###The melting point of two specimens of material are measured to be $202\\pm 3$ K and $209\\pm 4$ K. Could these be two samples of different materials?\n",
+        "###(assumption: errors are Gaussian)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G3nU26tNUa67"
+      },
+      "source": [
+        "##$H_{_0}$: the samples are of the same substance. $H_{_1}$: the samples are made of different materials.\n",
+        "##If $H_{_0}$ is true, the melting points of the two samples should be identical within measurement errors. That is, $T_{_1} - T_{_2}$ should have a Gaussian distribution around mean $0$."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d3L3j3sOUJoT",
+        "outputId": "3ab90a87-8539-4dde-b60b-629d73fe203f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from scipy.stats import norm\n",
+        "significance = 0.05\n",
+        "T1 = 202.0\n",
+        "T2 = 209.0\n",
+        "dT1 = 3.0\n",
+        "dT2 = 4.0\n",
+        "DeltaT = np.abs(T2 - T1) #only the magnitude of the difference matters\n",
+        "sigmaT = np.sqrt(dT1**2 + dT2**2)\n",
+        "DT_by_sigT = DeltaT / sigmaT\n",
+        "print(\"Standard deviation on difference: {} K\".format(np.round(sigmaT, decimals = 3)))\n",
+        "print(\"Difference in melting points: {} K\".format(np.round(DeltaT, decimals = 3)))\n",
+        "print(\"Difference in # of standard deviations: {}\".format(np.round(DT_by_sigT, decimals = 3)))\n",
+        "#p-value (two-tailed) = P(|Z| > DT_by_sigT) = 2 * P(Z < -DT_by_sigT) = 2 * CDF(-DT_by_sigT)\n",
+        "pvalue = np.round(2 * norm.cdf(-DT_by_sigT), decimals = 3)\n",
+        "print(\"p-value corresponding to this difference: {}\".format(pvalue))\n",
+        "if pvalue > significance:\n",
+        "  print(\"p-value > significance, cannot reject null hypothesis.\")\n",
+        "else:\n",
+        "  print(\"p-value < significance, null hypothesis rejected!\")"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Standard deviation on difference: 5.0 K\n",
+            "Difference in melting points: 7.0 K\n",
+            "Difference in # of standard deviations: 1.4\n",
+            "p-value corresponding to this difference: 0.162\n",
+            "p-value > significance, cannot reject null hypothesis.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U-B0aFc4XOKS"
+      },
+      "source": [
+        "#Case 2. Two sets of measurements.\n",
+        "###The average score on the statistics exam in 2019 was 12.5 for 109 students. In 2020, it was 12.7 for 123 students. The distributions have a spread of $\\sigma = 2.0$. Is the standard of students improving?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tY98_owDXi_r"
+      },
+      "source": [
+        "##$H_{_0}$: the standard has not changed. $H_{_1}$: the standard of students has increased (one-tailed test).\n",
+        "##If $H_{_0}$ is true, the difference in means of the two years should be normally distributed about 0."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ItlZWQLEX-Vu",
+        "outputId": "cda27d74-dab7-4585-e0d8-da866efcd3b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from scipy.stats import norm\n",
+        "significance = 0.05\n",
+        "mean2019 = 12.5\n",
+        "N2019 = 109\n",
+        "mean2020 = 12.7\n",
+        "N2020 = 123\n",
+        "sigma = 2.0 #this is the standard deviation on an INDIVIDUAL score\n",
+        "Delta_mean = mean2020 - mean2019 #the sign of the mean also matters\n",
+        "sigma2019 = sigma / np.sqrt(N2019) #This is the standard deviation on the MEAN score of 2019\n",
+        "sigma2020 = sigma / np.sqrt(N2020) #This is the standard deviation on the MEAN score of 2020\n",
+        "sigma_mean = np.sqrt(sigma2019**2 + sigma2020**2)\n",
+        "Dmean_by_sigmean = Delta_mean / sigma_mean\n",
+        "print(\"Standard deviation on difference in means: {}\".format(np.round(sigma_mean, decimals = 3)))\n",
+        "print(\"Difference in means: {}\".format(np.round(Delta_mean, decimals = 3)))\n",
+        "print(\"Difference in # of standard deviations: {}\".format(np.round(Dmean_by_sigmean, decimals = 3)))\n",
+        "#p-value (one-tailed) = P(Z > Dmean_by_sigmean) = 1 - CDF(Dmean_by_sigmean)\n",
+        "pvalue = np.round(1 - norm.cdf(Dmean_by_sigmean), decimals = 3)\n",
+        "print(\"p-value corresponding to this difference: {}\".format(pvalue))\n",
+        "if pvalue > significance:\n",
+        "  print(\"p-value > significance, cannot reject null hypothesis.\")\n",
+        "else:\n",
+        "  print(\"p-value < significance, null hypothesis rejected!\")"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Standard deviation on difference in means: 0.263\n",
+            "Difference in means: 0.2\n",
+            "Difference in # of standard deviations: 0.76\n",
+            "p-value corresponding to this difference: 0.224\n",
+            "p-value > significance, cannot reject null hypothesis.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7FwqkocMX5rF"
       },
       "source": [
@@ -249,7 +392,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "aDIS9ighX5rJ",
-        "outputId": "d646de12-5ec6-451d-f928-a1713c405f56"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 539
+        },
+        "outputId": "30802b4e-f543-4092-8281-271e75ef474c"
       },
       "source": [
         "from scipy.stats import t\n",
@@ -277,18 +424,30 @@
         "else:\n",
         "    print(\"Since p-value is > alpha, the null hypothesis cannot be rejected.\")"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Perform one-tailed test? [Y]/N: y\n",
-            "OK, performing one-tailed test...\n",
-            "Observed t statistic is negative, performing left-tailed test\n",
-            "p-value for t <= observed value is  6.03e-10\n",
-            "Since p-value is <= alpha, the null hypothesis is rejected.\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    728\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    582\u001b[0m         \"\"\"\n\u001b[0;32m--> 583\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    584\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-35-6d9afbe8ceb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.05\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mchoice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Perform one-tailed test? [Y]/N: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mchoice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Y'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"OK, performing one-tailed test...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    702\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         )\n\u001b[1;32m    706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    732\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     },
